
syntax = "proto3";
package desmos.subspaces.v3;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos/authz/v1beta1/authz.proto";

option go_package = "github.com/desmos-labs/desmos/v5/x/subspaces/types";

// MsgGrantTreasuryAuthorization grants an authorization on behalf of the
// treasury to a user
message MsgGrantTreasuryAuthorization {
  option (cosmos.msg.v1.signer) = "granter";
  option (amino.name)           = "desmos/MsgGrantTreasuryAuthorization";

  // Id of the subspace where the authorization should be granted
  uint64 subspace_id = 1 [
    (gogoproto.customname) = "SubspaceID",
    (gogoproto.moretags) = "yaml:\"subspace_id\""
  ];

  // Address of the user granting a treasury authorization
  string granter = 2 [
    (gogoproto.moretags) = "yaml:\"granter\"",
    (cosmos_proto.scalar) = "cosmos.AddressString"
  ];

  // Address of the user who is being granted a treasury authorization
  string grantee = 3 [
    (gogoproto.moretags) = "yaml:\"grantee\"",
    (cosmos_proto.scalar) = "cosmos.AddressString"
  ];

  // Grant represents the authorization to execute the provided methods
  cosmos.authz.v1beta1.Grant grant = 4
      [ (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"grant\"", (amino.dont_omitempty) = true ];
}

// MsgGrantTreasuryAuthorizationResponse defines the
// Msg/MsgGrantTreasuryAuthorization response type
message MsgGrantTreasuryAuthorizationResponse {}

// MsgRevokeTreasuryAuthorization revokes an existing treasury authorization
// from a user
message MsgRevokeTreasuryAuthorization {
  option (cosmos.msg.v1.signer) = "granter";
  option (amino.name)           = "desmos/MsgRevokeTreasuryAuthorization";

  // Id of the subspace from which the authorization should be revoked
  uint64 subspace_id = 1 [
    (gogoproto.customname) = "SubspaceID",
    (gogoproto.moretags) = "yaml:\"subspace_id\""
  ];

  // Address of the user revoking the treasury authorization
  string granter = 2 [
    (gogoproto.moretags) = "yaml:\"granter\"",
    (cosmos_proto.scalar) = "cosmos.AddressString"
  ];

  // Address of the user who is being revoked the treasury authorization
  string grantee = 3 [
    (gogoproto.moretags) = "yaml:\"grantee\"",
    (cosmos_proto.scalar) = "cosmos.AddressString"
  ];

  // Type url of the authorized message which is being revoked
  string msg_type_url = 4 [ (gogoproto.moretags) = "yaml:\"msg_type_url\"" ];
}

// MsgRevokeTreasuryAuthorizationResponse defines the
// Msg/MsgRevokeTreasuryAuthorization response type
message MsgRevokeTreasuryAuthorizationResponse {}